# 0canvas

./: .gitignore  DOCUMENTATION.md  PROJECT_ANALYSIS.md  README.md  RULES.md  Testing.dd  Untitled (2).dd  arun.0c  cursoe.0c  cursor.0c  design.0c  electron-builder.yml  index.html  new.0c  package-lock.json  package.json  pnpm-lock.yaml  tsup.config.ts  untitled.0c  vite.config.ts
.0canvas/: feedback.md
.0canvas/acp/: registry.json
.github/workflows/: publish-catalogs.yml  release.yml
catalogs/: models-v1.json
docs/: ACP_INTEGRATION.md  AGENT_CAPABILITY_TEST_MATRIX.md  AGENT_RUNTIME.md  ATTRIBUTIONS.md  CHAT_REBUILD_PHASE_0.md  CHAT_REBUILD_ROADMAP.md  DOCUMENTATION.md  Development Enhancement and Collab.md  ORCHESTRATION_DESIGN.md  PHASE_1_2_TEST_PLAN.md  PRODUCT_VISION.md  PRODUCT_VISION_V2.md  PRODUCT_VISION_V3.md  PROJECT_ANALYSIS.md  TAURI_MAC_APP_PLAN.md  TAURI_SETUP.md  ZED_ADOPTION.md  ZEROS_COLORS_INTEGRATION_TRANSCRIPT.md
docs/Zeros-Structure/: 00-Start-Here.md  01-Folder-Map.md  02-Current-User-Flows.md  03-Mac-App-Architecture.md  04-Agent-Chat-And-Agents.md  05-Browser-Overlay-And-Engine.md  06-Project-Files-0c-And-Zeros.md  07-0colors-Integration.md  08-0accounts-0research-Websites.md  09-Cleanup-And-Consolidation-Plan.md  10-UI-Inventory-And-Wiring-Status.md  11-Design-Workspace-Style-Editor-Deep-Dive.md  12-Doc-Index-And-Labels.md
docs/context/: README.md
electron/: context-menu.ts  db.ts  deep-link.ts  main.ts  menu.ts  preload.ts  runtime-mode.ts  sidecar.ts  tsconfig.json  tsup.config.ts  updater.ts
electron/ipc/: events.ts  router.ts
extensions/vscode/: package-lock.json  package.json
scripts/: build-sidecar.mjs  check-ui-consistency.mjs  electron-after-pack.cjs  find-dead-css.mjs  find-dead-engine-css.mjs  package.publish.json  rename-electron-dev-binary.cjs  setup.mjs  strip-dead-css-orphans.mjs  strip-dead-engine-css.mjs  test-adapters.mjs  test-agent-capabilities.sh  visual-harness.mjs
scripts/fixtures/: README.md  claude-basic.expected.json  claude-basic.jsonl  codex-basic.expected.json  codex-basic.jsonl
servers/0accounts/: .env.example  Dockerfile  pnpm-lock.yaml  railway.toml
servers/0research/: BACKEND_CONTEXT.md  package.json  railway.toml
skills/: audit-contrast.md  build-ui-feature.md  clone-design.md  generate-variants.md  migrate-tokens.md  review-ui-change.md  theme-propagation.md  tokens-decision.md  ui-consistency.md
src/: app-shell.tsx  cli.ts  index.ts  main.tsx  vite-plugin.ts
src-tauri/: .gitignore  Cargo.toml  tauri-updater.key.pub  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_cli.rs  css_files.rs  env_files.rs  git.rs  lib.rs  localhost.rs  main.rs  secrets.rs  sidecar.rs  skills.rs  todo.rs
src/app/: store.tsx
src/demo/: App.tsx  main.tsx  routes.ts
src/engine/: cache.ts  css-resolver.ts  css-writer.ts  discovery.ts  framework-detector.ts  index.ts  mcp.ts  oc-manager.ts  server.ts  types.ts  (+2 more)
styles/: tokens.css
vscode-extension/: .vscodeignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vite.webview.config.ts
(+510 files in other folders)
