[package]
name = "zerocanvas"
version = "0.1.0"
description = "0canvas — Visual design tool for production code (Mac app)"
authors = ["Zeros Design"]
edition = "2021"

# Phase 1A-1 scaffold. Rust sources will expand in later sub-phases:
#   1A-2 → sidecar.rs (spawn the Node/Bun engine)
#   1A-3 → fs.rs (open folder dialog, project switching)
#   Phase 2 → keychain.rs (macOS keychain via security-framework)
#   Phase 1C → pty.rs (terminal sessions via tauri-plugin-pty)
#   Phase 3 → git.rs (git2-rs IPC for designer + dev workflows)
#   Phase 4 → shell.rs (spawn claude-code / codex / gh subprocesses)
#   Phase 4 → worktree.rs (parallel-agent worktree orchestration)

[lib]
name = "zerocanvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
