[package]
name = "zerocanvas"
version = "0.1.0"
description = "0canvas — Visual design tool for production code (Mac app)"
authors = ["Zeros Design"]
edition = "2021"

# Phase 1A-1 scaffold. Rust sources will expand in later sub-phases:
#   1A-2 → sidecar.rs (spawn the Node/Bun engine)
#   1A-3 → fs.rs (open folder dialog, project switching)
#   Phase 2 → keychain.rs (macOS keychain via security-framework)
#   Phase 1C → pty.rs (terminal sessions via tauri-plugin-pty)
#   Phase 3 → git.rs (git2-rs IPC for designer + dev workflows)
#   Phase 4 → shell.rs (spawn claude-code / codex / gh subprocesses)
#   Phase 4 → worktree.rs (parallel-agent worktree orchestration)

[lib]
name = "zerocanvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-pty = "0.2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["sync", "io-util", "process", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Phase 4 — probe whether the user has `claude` / `codex` CLI installed
# before trying to spawn them. Better error than "No such file or
# directory" bubbling up from ENOENT.
which = "6"
# Git operations — libgit2 bindings. Bring HTTPS via the system libcurl
# + credential helper so the user's existing `git` auth (osxkeychain,
# ssh-agent) works without re-credentialing through 0canvas.
git2 = { version = "0.20", default-features = false, features = [
    "https",
    "ssh",
] }

# macOS Keychain (Phase 2-C). Target-specific so builds on Linux/Windows
# later don't fail — those platforms get their own secret backends.
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
